--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -137,7 +137,7 @@ blockquote {
 
 
 cite {
-    color: $colorPrimaryHeroLight; 
+    color: var(--color-primary-heller); 
     font-weight: normal;
     font-style: normal;
     
