--- a/src/sass/icons/_default.scss
+++ b/src/sass/icons/_default.scss
@@ -4,7 +4,7 @@
 
 $svg-icon-size: 1.4rem;
 $svg-icon-color: var(--color-primary-basis);
-$svg-icon-color_hover: $colorHover;
+$svg-icon-color_hover: var(--color-primary-dunkelste);
 
 
 // Default icon width for use in :before
