--- a/src/sass/plugins/_rrze-search.scss
+++ b/src/sass/plugins/_rrze-search.scss
@@ -85,7 +85,7 @@
 	line-height: 1.5rem;
 	font-size: 1rem;
 	height: 30px;
-	border: 3px solid $colorMetaBackground;
+	border: 3px solid var(--color-StandardHellgrau);
     }
     input[type="submit"] {
 	margin-left: -20px;
