--- a/src/sass/structure/content/_organigramm.scss
+++ b/src/sass/structure/content/_organigramm.scss
@@ -12,7 +12,7 @@
 	
 	ul {
 		margin-bottom: 20px;
-		border-left: 2px solid $colorLightest;
+		border-left: 2px solid var(--color-primary-hellste);
 		margin-left: 10px;
 	}
 	
