--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 
 #footer {
-	background: $colorPrimaryHero;
+	background: var(--color-primary-basis);
 	color: #fff;
 	padding: 0 0 20px 0;
 	
