--- a/src/sass/backend/_customizer.scss
+++ b/src/sass/backend/_customizer.scss
@@ -17,7 +17,7 @@ $color_customizer_buttons: #0085ba;
     #accordion-panel-templates,
     #accordion-panel-advanced {
 	.accordion-section-title {
-	     border-left-color: $colorDefault;
+	     border-left-color: var(--color-Default);
 	}
     }
     #accordion-panel-superadmin {
