--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -86,7 +86,7 @@ h2 {
 	&.menu-header {
 		padding: 11px 15px;
 		margin-top: 0px;
-		border-top: 1px solid $colorLightest;	
+		border-top: 1px solid var(--color-primary-hellste);	
 	}
 	
 	.search & {
