--- a/src/sass/elements/_tables.scss
+++ b/src/sass/elements/_tables.scss
@@ -101,7 +101,7 @@ table {
 	}
 	
 	tr:nth-child(odd) td {
-		color:  $colorLightestContrast;
+		color:  var(--color-primary-dunkelste);
 		background: var(--color-StandardHellgrau);
 		
 		h1, h2, h3, h4, h5, h6 {
@@ -111,7 +111,7 @@ table {
 		
 		ul {
 		    li {
-			color:  $colorLightestContrast;
+			color:  var(--color-primary-dunkelste);
 		    }
 		}
 	}
