--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -16,14 +16,14 @@
 	
 	.events-more {
 		color: $colorButton;
-		background: $colorButtonBackground;
+		background: var(--color-primary-basis);
 		padding: 8px 10px;
 		text-decoration: none;
 		@include border-radius(3px);
 		@include px2rem($font-size-textbuttons);
 		
 		&:hover, &:focus {
-			background: $colorButtonBackgroundHover;
+			background: var(--color-primary-dunkler);
 			text-decoration: none;
 		}
 	}
