--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -68,7 +68,7 @@ button.expand-all {
             .accordion-toggle {
                 border-left: 10px solid $colorPrimary;
                 background: $colorContentBorders;
-                color: $colorDefault; // $colorPrimary;
+                color:  var(--color-Default);
                 @include border-radius(4px);
 		@include px2rem($font-size-content-toggle);
                 text-decoration: none;
@@ -85,15 +85,15 @@ button.expand-all {
 
                 &:hover,
                     &:focus {
-                    background-color: darken($colorLightest, 3%);
+                    background-color: darken($PalettonHellste, 3%);
                     text-decoration: none;
                 }
 
                 &.active,
                 &.active:hover,
                     &.active:focus {
-                    background-color: darken($colorLightest, 3%);
-                    color: $colorLightestContrast; // $colorPrimary;
+                    background-color: darken($PalettonHellste, 3%);
+                    color: var(--color-primary-dunkelste); // $colorPrimary;
 
                     &:before {
                         @extend .fa-caret-up;
@@ -158,7 +158,7 @@ button.expand-all {
             right: inherit;
             top: inherit;
         }
-        border: 1px solid $PalettonHellste;
+        border: 1px solid var(--color-primary-hellste);;
         margin: 30px 20px;
         height: inherit;
     }
@@ -182,7 +182,7 @@ button.expand-all {
     header {
         border-left: 10px solid $colorPrimary;
         background: $colorContentBorders;
-        color: $colorDefault; // $colorPrimary;
+        color:  var(--color-Default);
         @include border-radius(4px);
         text-decoration: none;
         @include px2rem($font-size-content-toggle);
@@ -190,7 +190,7 @@ button.expand-all {
         position: relative;
 
         h2 {
-            color: $colorDefault; // $colorPrimary;
+            color:  var(--color-Default);
             padding: 0px;
         }
         &.phil,
