--- a/src/sass/plugins/_rrze-glossary.scss
+++ b/src/sass/plugins/_rrze-glossary.scss
@@ -37,7 +37,7 @@
 		a:hover,
 		a:focus {
 		    text-decoration: underline;
-		    background-color: darken($colorLightest, 3%);
+		    background-color: darken($PalettonHellste, 3%);
 		    border-color: var(--color-primary-basis);
 		    background: var(--color-primary-basis);
 		    color: $colorMainBackground;
