--- a/src/sass/structure/content/_comments.scss
+++ b/src/sass/structure/content/_comments.scss
@@ -8,8 +8,8 @@
     clear: both;
     code {
 	white-space: normal;
-	color: $colorLightestContrast;
-	background-color: $colorLightest;
+	color: var(--color-primary-dunkelste);
+	background-color: var(--color-primary-hellste);
 
     }
     label {
@@ -32,7 +32,7 @@
 	margin: 0px;
     }
     .comment-body {
-	border-left: 2px solid $colorLightest;
+	border-left: 2px solid var(--color-primary-hellste);
 	font-style: initial;
 	padding: 10px 0 5px 10px;
 		opacity: 0.7;
