--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -189,7 +189,7 @@
 
 			a {
 				@include inline-block;
-				background: $colorLightest;
+				background: var(--color-primary-hellste);
 				text-decoration: none;
 				padding: 3px 5px 2px 5px;
 				@include border-radius(3px);
