--- a/src/sass/structure/content/_search.scss
+++ b/src/sass/structure/content/_search.scss
@@ -122,23 +122,23 @@
 	    }
 	    input[type="text"] {
 		@include px2rem($font-size-herosearch);
-		border: 1px solid $colorMeta;
+		border: 1px solid  var(--color-Default);
 		width: 80%;
 		padding: 5px 10px 5px 30px;
 		height: inherit;
 		margin: 0;
-		background: $colorMeta; // $colorSearchInputBackground;
+		background:  var(--color-Default); 
 		color: #fff; // $colorSearchInput;
 
 		&:focus, &:hover {
-			background-color: $colorMetaHover; // $colorSearchInputBackgroundFocus;
+			background-color: $colorMetaHover; 
 			border: 1px solid $colorMetaHover;
 		}
 	    }
 
 	    input[type="submit"] {
 		@include px2rem($font-size-herosearch);
-		    border: 1px solid $colorSearchInputBackground;
+		    border: 1px solid var(--color-primary-hellste);
 		    background: $colorSearchInputBackgroundFocus;
 		    color: $colorSearchInput;
 		    padding: 5px 10px;
@@ -146,7 +146,7 @@
 		    margin-left: -30px;
 		    
 		    &:focus, &:hover {
-			    background-color: $colorSearchInputBackground;
+			    background-color: var(--color-primary-hellste);
 		    }
 	    }
 	    .searchicon {
