--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -4,7 +4,7 @@
 
 #meta {
 	@include placeholder(#fff);
-	background: $colorMetaBackground;
+	background: var(--color-StandardHellgrau);
 	z-index: 100;
 	height: 50px;
 	padding: 5px 0;
