--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -27,7 +27,7 @@
 		a {
 			@include inline-block;
 			padding: 10px 0;
-			color: $colorMeta;
+			color:  var(--color-Default);
 			text-decoration: none;
 		}
 
