--- a/src/sass/structure/widgets/_sidebar.scss
+++ b/src/sass/structure/widgets/_sidebar.scss
@@ -5,7 +5,7 @@
 
 /* Sidebar: Inline */
 .sidebar-inline {
-	border-top: 2px solid $colorLightest;
+	border-top: 2px solid var(--color-primary-hellste);
         margin: 10px 0;
 	padding-top: 10px;
         @media (min-width: $screen-sm) {
@@ -42,7 +42,7 @@
 	
 
 	@media (min-width: $screen-md) {
-	    border-left: 2px solid $colorLightest;
+	    border-left: 2px solid var(--color-primary-hellste);
 	    border-top: none;
             padding-left: ceil(($fau-gutter-width / 2));	
             margin-top: 0;
