--- a/src/sass/plugins/_plugin-wpc7.scss
+++ b/src/sass/plugins/_plugin-wpc7.scss
@@ -30,7 +30,7 @@ div.wpcf7-response-output {
         vertical-align: -4px;
         min-width: 24px;
     }
-    color: $colorText;
+    color: var(--color-Text);
 }
 
 .wpcf7-mail-sent-ng {
