--- a/src/sass/plugins/_rrze-glossary.scss
+++ b/src/sass/plugins/_rrze-glossary.scss
@@ -10,7 +10,7 @@
 	
 	li {
 	    border: 1px solid var(--color-StandardHellgrau);
-	    color: $colorTextLight;
+	    color: var(--color-TextLight);
 	    
 	    width: 2rem;
 	    height: 2rem;
