--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -9,7 +9,7 @@
     }
     main {
 	@include px2rem($font-size-base);
-	color: $colorText;
+	color: var(--color-Text);
 	font-family: $fontStack;
 	padding-top: 0;
 	width: 100%;
