--- a/src/sass/structure/content/_search.scss
+++ b/src/sass/structure/content/_search.scss
@@ -27,7 +27,7 @@
 		padding: 5px 0;
 		margin-top: 0px;
 		margin-bottom: 10px;
-		color: $colorText;
+		color: var(--color-Text);
 		display: block;
 		font-family: $fontStack;
 		
